--- a/wp-content/themes/themeLatiamaria/css/main.less
+++ b/wp-content/themes/themeLatiamaria/css/main.less
@@ -25,28 +25,101 @@
 		}
 		&.social_nav{
 			float: right;
+			background-color: #006b97;
+			margin: 0;
+			padding: 5px 15px;
+			li{
+				a{
+					background-image: url('../img/social.png');
+					background-repeat: no-repeat;
+					display: block;
+					width: 42px;
+					height: 42px;
+					text-indent: -9999px;
+					&:hover{
+						background-color: transparent;
+						opacity: 0.7;
+					}
+				}
+				&.facebook{
+					a{
+						background-position: 5px 0;
+					}
+				}
+				&.instagram{
+					a{
+						background-position: -46px 0;
+					}
+				}
+				&.twitter{
+					a{
+						background-position: -98px 0;
+					}
+				}				
+			}			
 		}
 		li{
 			display: inline-block;
 			a{
 				color: #fff;
+				padding: 13px 15px;
 				&:hover{
 					background-color: #008ab7;
 				}
 			}
+			&.current-menu-item , &.current_page_item{
+				background-color: #008ab7;
+			}
 		}
+	}
+}
+#container{
+	width: 1000px;
+	margin: 0 auto;
+}
+#sidebar{
+	display: none;
+}
+.container{
+	width: 1000px;
+}
+#footer{
+	background-color: #006b97;
+	color: #fff;
+	padding: 20px 0;	
+}
+.main-banner{
+	background-image: url('../img/main-banner_aux.jpg');	
+	.container{
+		position: relative;
+	}
+	.logo{
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 11;
+		&:hover{
+			opacity: 0.7;			
+		}		
 	}
 }
 .bg-banner{
 	background-image: url('../img/main-banner.jpg');
-	background-repeat: no-repeat;
-	background-position: top center;
 	height: 445px;
 	width: 100%;
 }
+.bg{
+	background: url('../img/Tia-Maria-Web.png') 50% 0 no-repeat fixed;
+	height: 445px;
+	margin: 0 auto;
+	padding: 0;
+	position: absolute;
+	width: 1000px;
+	z-index: 10;	
+}
 .wrap-video{
 	background-color: #f1f1f1;
-	padding: 15px 0;
+	padding: 15px 20px;
 	margin: 20px 0;
 	overflow: hidden;
 	.item-video{
@@ -59,7 +132,23 @@
 			background-color: #fff;
 			display: inline-block;
 			border:solid #eaeaea 1px;
+			margin:5px; 
+			min-height: 260px;
 			.radius(5px);
+			.thumbnail{
+				width: 100%;
+			}
+			&:hover{
+				.thumbnail{
+					opacity: 0.5;
+					-webkit-transition: opacity .15s ease-in-out;
+					-moz-transition: opacity .15s ease-in-out;
+					-ms-transition: opacity .15s ease-in-out;
+					-o-transition: opacity .15s ease-in-out;
+					transition: opacity .15s ease-in-out;						
+				}
+			
+			}
 		}
 		.video-title{
 			color: #c52121;
@@ -90,4 +179,21 @@
 		padding: 20px;
 	}
 }
-
+.entry-content{
+	overflow: hidden;
+	.col{
+		display: inline-block;
+		width: 48%;
+		padding: 20px;
+		float: left;
+	}
+}
+.form-horizontal{
+	input[type="text"], input[type="email"]{
+		width: 100%;
+	}
+	textarea{
+		width: 100%;
+		height: 100px;
+	}
+}
