--- a/wp-content/themes/themeLatiamaria/css/main.less
+++ b/wp-content/themes/themeLatiamaria/css/main.less
@@ -197,3 +197,41 @@
 		height: 100px;
 	}
 }
+.wrap-products{
+	overflow: hidden;
+	margin: 20px 0 30px;
+	h1{
+		text-align: center;
+	}
+	.product_list_widget{
+		list-style: none;
+		padding: 0;
+		margin: 0;
+		li{
+			float: left;
+			width: 20%;
+			text-align: center;
+			margin: 5px 0;
+			padding: 10px;
+			text-align: center;
+			a{
+				padding: 10px;
+				background-color: #fff;
+				display: block;
+				border:solid #eaeaea 1px;
+				margin:5px; 
+				min-height: 130px;
+				.radius(5px);				
+			}
+			.amount{
+				color: #c52121;
+				font-weight: bold;
+			}
+			img{
+				display: block;
+				clear: both;
+				margin: 0 auto;
+			}
+		}
+	}
+}
