--- a/wp-content/themes/themeLatiamaria/css/main.less
+++ b/wp-content/themes/themeLatiamaria/css/main.less
@@ -220,12 +220,20 @@
 				display: block;
 				border:solid #eaeaea 1px;
 				margin:5px; 
-				min-height: 130px;
-				.radius(5px);				
+				min-height: 140px;
+				.radius(5px);
+				&:hover{
+					-webkit-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.20);
+					-moz-box-shadow:    0px 0px 8px 0px rgba(0, 0, 0, 0.20);
+					box-shadow:         0px 0px 8px 0px rgba(0, 0, 0, 0.20);	
+					text-decoration: none;	
+					opacity: 0.5;		
+				}				
 			}
 			.amount{
 				color: #c52121;
 				font-weight: bold;
+				font-size: 16px;
 			}
 			img{
 				display: block;
@@ -234,4 +242,12 @@
 			}
 		}
 	}
+}
+.woocommerce-breadcrumb{
+    background: none repeat scroll 0 0 #555;
+    color: #fff!important;
+    padding: 5px 10px!important;
+    a{
+    	color: #fff!important;
+    }	
 }
