--- a/wp-content/themes/themeLatiamaria/css/main.less
+++ b/wp-content/themes/themeLatiamaria/css/main.less
@@ -95,7 +95,7 @@
 	}
 	.logo{
 		position: absolute;
-		top: 0;
+		top: 45px;
 		left: 0;
 		z-index: 11;
 		&:hover{
@@ -105,18 +105,11 @@
 }
 .bg-banner{
 	background-image: url('../img/main-banner.jpg');
+	background-position: top center;
 	height: 445px;
 	width: 100%;
 }
-.bg{
-	background: url('../img/Tia-Maria-Web.png') 50% 0 no-repeat fixed;
-	height: 445px;
-	margin: 0 auto;
-	padding: 0;
-	position: absolute;
-	width: 1000px;
-	z-index: 10;	
-}
+
 .wrap-video{
 	background-color: #f1f1f1;
 	padding: 15px 20px;
