--- a/wp-content/themes/themeLatiamaria/css/main.less
+++ b/wp-content/themes/themeLatiamaria/css/main.less
@@ -106,6 +106,7 @@
 .bg-banner{
 	background-image: url('../img/main-banner.jpg');
 	background-position: top center;
+	background-repeat: no-repeat;
 	height: 445px;
 	width: 100%;
 }
@@ -243,4 +244,93 @@
     a{
     	color: #fff!important;
     }	
+}
+.nav-mobile{
+	display: none;
+	background-image: url('../img/nav-mobile.png');
+	width: 41px;
+	height: 36px;
+
+}
+@media (max-width:1000px){
+	.container, #container{
+		width: 100%;
+	}
+	#container{
+		padding: 0 20px;
+	}	
+}
+@media (max-width:970px){
+	#main-nav ul li a {
+	    color: #fff;
+	    font-size: 16px;
+	    padding: 13px 10px;
+	}	
+}
+@media (max-width:880px){
+	.wrap-single-video{
+		width: 100%;
+	}	
+}
+@media (max-width:825px){
+	#main-nav{
+		position: relative;
+		ul.nav{
+			display: none;
+		    background-color: #006b97;
+		    position: absolute;
+		    top: 52px;
+		    left: 0px;
+		    width: 320px;	
+		    z-index: 100;
+		    li{
+		    	display: block;
+		    }		
+		}		
+	}
+	.nav-mobile{
+		display: block;
+		position: absolute;
+		left: 20px;
+		top: 8px;
+		text-indent: -9999px;
+	}
+	.wrap-video .item-video{
+		width: 25%;
+	}
+	.wrap-products .product_list_widget li{
+		width: 25%;
+	}
+}
+@media (max-width:680px){
+	.wrap-video .item-video{
+		width: 33.3%;
+	}	
+	.wrap-products .product_list_widget li{
+		width: 33.3%;
+	}	
+	.entry-content .col{
+		width: 100%;
+		padding: 20px 0;
+	}
+}
+@media (max-width:500px){
+	.wrap-video .item-video{
+		width: 50%;
+	}	
+	.wrap-products .product_list_widget li{
+		width: 50%;
+	}	
+	h1, .h1{
+		font-size: 25px;
+	}
+}
+@media (max-width:380px){
+	.wrap-video .item-video{
+		width: 100%;
+		height: auto;
+	}
+	.wrap-products .product_list_widget li{
+		width: 100%;
+	}	
 }
