--- a/wp-content/themes/themeLatiamaria/css/main.less
+++ b/wp-content/themes/themeLatiamaria/css/main.less
@@ -27,7 +27,7 @@
 			float: right;
 			background-color: #006b97;
 			margin: 0;
-			padding: 5px 15px;
+			padding: 5px 10px;
 			li{
 				a{
 					background-image: url('../img/social.png');
@@ -54,6 +54,11 @@
 				&.twitter{
 					a{
 						background-position: -98px 0;
+					}
+				}
+				&.youtube{
+					a{
+						background-position: -143px 0;
 					}
 				}				
 			}			
