--- a/wp-content/themes/themeLatiamaria/css/ie7fix.css
+++ b/wp-content/themes/themeLatiamaria/css/ie7fix.css
@@ -1,3 +1,6 @@
 #main-nav ul li{float: left;}
 #main-nav{background-color: #0085bc;}
 #main-nav ul.social_nav li a{padding: 0;}
+.woocommerce ul.products li.product, .woocommerce-page ul.products li.product{
+	height: 350px;
+}
