--- a/wp-content/themes/themeLatiamaria/css/main.less
+++ b/wp-content/themes/themeLatiamaria/css/main.less
@@ -329,6 +329,17 @@
 	h1, .h1{
 		font-size: 25px;
 	}
+	.bg-banner{
+		background-image: url("../img/main-banner-mobile.jpg");
+		height: 185px;
+		background-position: left center;
+	}
+	.logo{
+		top: 20px;
+		img{
+			width: 215px;
+		}
+	}
 }
 @media (max-width:380px){
 	.wrap-video .item-video{
